# Murmur---Social-Media

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: Dockerfile  README.md
backend/src/accounts/: tests.py  views.py
backend/src/app/: api.py  settings.py  urls.py
backend/src/comments/: views.py
backend/src/posts/: views.py
backend/src/reactions/: admin.py  tests.py
backend/src/tests/: test_app.py
frontend/: README.md  package.json
frontend/src/: app.css
frontend/src/lib/: Footer.svelte  Navbar.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
src/: manage.py
src/accounts/: apps.py  models.py  schemas.py  services.py  tests.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_profile_delete_userprofile.py  0003_alter_profile_user.py  0004_profile_photo.py
src/app/: api.py  security.py  settings.py
src/apps/accounts/: apis.py  models.py  schemas.py  tests.py
src/apps/accounts/migrations/: 0003_alter_profile_user.py
src/apps/accounts/templates/accounts/: login.html
src/apps/comments/: apis.py  tests.py
src/apps/core/: urls.py  views.py
src/apps/core/templates/core/: about.html  landing.html
src/apps/posts/: apis.py
src/apps/reactions/: apis.py  tests.py
src/comments/: models.py  schemas.py  services.py  tests.py  views.py
src/comments/migrations/: 0001_initial.py
src/murmur/: api.py  asgi.py  settings.py  urls.py  wsgi.py
src/posts/: models.py  schemas.py  services.py  tests.py  views.py
src/posts/migrations/: 0001_initial.py
src/reactions/: models.py  schemas.py  services.py  tests.py  views.py
src/reactions/migrations/: 0001_initial.py
src/templates/cotton/: footer.html  head.html  navbar.html
src/templates/cotton/layouts/: app.html  base.html
src/tests/: test_app.py
