[project]
name = "djninja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-ninja>=1.4.3",
    "django-ninja-extra>=0.30.1",
    "django-ninja-jwt[crypto]>=5.3.7",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py", "testing/*.py", "tests.py"]

[tool.pyright]
venv = ".venv"
venvPath = "."
